syntax = "proto3";
package clutch_rpc.v1;

option go_package = "github.com/vinewz/clutchRPC/go/gen/clutch/v1";

service UseShellService {
  rpc UseShell(UseShellRequest) returns (UseShellResponse) {}
  rpc ConfirmShell(ConfirmShellRequest) returns (ConfirmShellResponse);
}

message UseShellRequest {
  string app_name = 1;
  string command = 2;
}

message UseShellResponse {
  string output = 1;
  string error = 2;
}

message ConfirmShellRequest {
  bool allow = 1;
}

message ConfirmShellResponse {}
